<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".FrontEndUser.ProfiloFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profilo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/avatarprofilo" />

            <Button
                android:id="@+id/bPreferitiProfilo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/brand_rounded"
                android:drawableLeft="@drawable/ic_cuorepieno"
                android:padding="20dp"
                android:text="@string/preferiti"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bCarelloProfilo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/brand_rounded"
                android:drawableLeft="@drawable/ic_carello_black"
                android:padding="20dp"
                android:text="CARELLO"
                android:textColor="@color/black"
                app:iconTint="@color/black" />

            <Button
                android:id="@+id/bImpostazioniProfilo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/brand_rounded"
                android:drawableLeft="@drawable/ic_user_profile"
                android:padding="20dp"
                android:text="@string/impostazioni"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bLogoutUtente"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="45dp"
                android:background="@drawable/brand_rounded"
                android:text="@string/logout"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>