<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontEndUser.ItemDetailsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="889dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivItemAdd"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="26dp"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/bIndietroModify"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="120dp"
                        android:background="@drawable/brand_rounded"
                        android:backgroundTint="@color/white"
                        android:foreground="?attr/homeAsUpIndicator"
                        android:foregroundGravity="center"
                        android:foregroundTint="@color/arancio"
                        android:onClick="goBack" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/logo" />

                    <View
                        android:id="@+id/buttonLove"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="120dp"
                        android:background="@drawable/brand_rounded"
                        android:backgroundTint="@color/white"
                        android:foreground="@drawable/ic_cuorevuoto"
                        android:foregroundGravity="center"
                        android:foregroundTint="@color/arancio" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/info_del_prodotto"
                android:textColor="@color/arancio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="6dp"
                android:text="@string/informazioni"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rbItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:backgroundTint="@color/arancio"
                    android:progressBackgroundTint="@color/arancio"
                    android:progressTint="@color/arancio"
                    android:isIndicator="true"
                    android:layout_marginEnd="25dp"/>

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numvoti" />

                <Button
                    android:id="@+id/bVota"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/arancio"
                    android:text="@string/vota"
                    android:textColor="@color/white"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/descrizione"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDescrizione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="100dp"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bAdd"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buy_rounded"
        android:elevation="1dp"
        android:text="@string/aggiungi_al_carello"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bModifyDesign"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/buy_rounded"
        android:backgroundTint="@color/arancio"
        android:paddingBottom="40dp"
        android:rotationX="0"
        android:text="@string/aggiunto_al_carello"
        android:textColor="@color/white"
        android:visibility="invisible" />

</RelativeLayout>