<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontEndUser.ModificaPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
        <EditText
            android:id="@+id/etEmailPWS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/arancio"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/arancio"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/vecchia_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etNuovaPWS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/arancio"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/nuova_password"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSavePSW"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rect_roundend"
            android:backgroundTint="@color/arancio"
            android:fontFamily="monospace"
            android:text="@string/salva_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"/>
    </LinearLayout>
</FrameLayout>